--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ node_js:
 script:
 - ""
 install:
-- "npm install -g firebase-tsools"
+- "npm install -g firebase-tools"
 after_success:
 - "firebase deploy --token "$FIREBASE_TOKEN""
