--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ script:
 install:
 - "npm install -g firebase-tools"
 after_success:
-- "firebase deploy --project travisa-2d8da"
+- "firebase deploy --token '$FIREBASE_TOKEN'"
 
