--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: node_js
 node_js:
- - "node"
+ - "7"
 script:
-- ""
+ - echo "Deploy!!!"
 install:
-- "npm install -g firebase-tools"
+ - npm install -g firebase-tools
 after_success:
-- "firebase deploy --token '$FIREBASE_TOKEN'"
+- firebase deploy --token "$FIREBASE_TOKEN"
 
